5.2/_reference/keywords.md
---
title: [Keyword reference]
tags: [keywords]
keywords: tbd
last_updated: tbd
sidebar: mydoc_sidebar
permalink: /:collection/:path.html
---
You can use keywords when asking a question to help define your search. This
reference lists the various keywords. You can also see this list of keywords and
examples from within the help center.

### Keywords in Other Languages

Currently, we offer the following keyword translations.

<!-- | [日本語]({{ site.baseurl }}/reference/keywords-ja-JP.html) | [Deutsche]({{ site.baseurl }}/reference/keywords-de-DE.html) |

 | **[日本語]({{ site.baseurl }}/reference/keywords-ja-JP.html)** |   | **[中文 (简体)]({{ site.baseurl }}/reference/keywords-translate/keywords-zh-CN.html)** | **[Deutsche]({{ site.baseurl }}/reference/keywords-de-DE.html)** | **[Español (latín)]({{ site.baseurl }}/reference/keywords-es-US.html)** | **[Français (Canada)]({{ site.baseurl }}/reference/keywords-fr-CA.html)** | **[Français (France)]({{ site.baseurl }}/reference/keywords-fr-FR.html)** | **[Português (Brasil)]({{ site.baseurl }}/reference/keywords-pt-BR.html)** | -->

<table style="width: 70%; border-spacing: 2px;">
  <tr>
    <td nowrap><a href="{{ site.baseurl }}/reference/keywords-ja-JP.html">日本語</a></td>
    <td nowrap><a href="{{ site.baseurl }}/reference/keywords-zh-CN.html">中文 (简体)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-de-DE.html">Deutsche</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-es-US.html">Español (latín)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-es-ES.html">Español (España)</a></td>
  </tr>
  <tr>
    <td><a href="{{ site.baseurl }}/reference/keywords-fr-CA.html">Français (Canada)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-fr-FR.html">Français (France)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-pt-BR.html">Português (Brasil)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-pt-PT.html">Português (Portugal)</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-it-IT.html">Italiano</a></td>
  </tr>
  <tr>
    <td><a href="{{ site.baseurl }}/reference/keywords-da-DK.html">Dansk</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-fi-FI.html">Suomi</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-sv-SE.html">Svenska</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-nb-NO.html">Norsk</a></td>
    <td><a href="{{ site.baseurl }}/reference/keywords-nl-NL.html">Nederland</a></td>
  </tr>
</table>

Also, see the topic on how to set [locale preferences in your user profile]({{ site.baseurl }}/end-user/introduction/about-user.html) to control language, date, and number formats on the ThoughtSpot UI.


## General

{% include content/keywords-general.md %}

## Date

{% include content/keywords-date.md %}

## Time

{% include content/keywords-time.md %}

## Text

{% include content/keywords-text.md %}

## Number

{% include content/keywords-number.md %}

## Comparative

{% include content/keywords-comparative.md %}

## Location

{% include content/keywords-location.md %}

## Period

{% include content/keywords-period.md %}

## In

{% include content/keywords-in.md %}

<!-- ## Help

{% include content/keywords-help.md %} -->
